--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -109,6 +109,15 @@ prj_run Export -impl SevenSegClock -task Jedecgen
 
 
 
+<A name="pn150103010324"></A><B><U><big>pn150103010324</big></U></B>
+#Start recording tcl command: 1/3/2015 01:02:59
+#Project Location: C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_project close
+#Stop recording: 1/3/2015 01:03:24
+
+
+
 <BR>
 <BR>
 <BR>
