--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -6,17 +6,7 @@
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="pn150108034703"></A><B><U><big>pn150108034703</big></U></B>
-#Start recording tcl command: 1/8/2015 03:41:22
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_run Synthesis -impl SevenSegClock -task Lattice_Synthesis
-prj_project close
-#Stop recording: 1/8/2015 03:47:03
-
-
-
-<A name="pn150113004444"></A><B><U><big>pn150113004444</big></U></B>
+<PRE><A name="pn150113004444"></A><B><U><big>pn150113004444</big></U></B>
 #Start recording tcl command: 1/13/2015 00:44:21
 #Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
 prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
@@ -128,6 +118,52 @@ prj_run Export -impl SevenSegClock -task Jedecgen
 prj_run Export -impl SevenSegClock -task Jedecgen
 prj_run Export -impl SevenSegClock -task Jedecgen
 #Stop recording: 3/21/2015 01:12:44
+
+
+
+<A name="pn150402042505"></A><B><U><big>pn150402042505</big></U></B>
+#Start recording tcl command: 4/2/2015 03:45:58
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_project close
+pgr_program run
+pgr_project close
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_program run
+pgr_program run
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_program run
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+#Stop recording: 4/2/2015 04:25:05
 
 
 
