--- a/Lattice_FPGA/SevenSegClock/AutoShift_lse_lsetwr.html
+++ b/Lattice_FPGA/SevenSegClock/AutoShift_lse_lsetwr.html
@@ -1,3 +1,12 @@
+<HTML>
+<HEAD><TITLE>Lattice Synthesis Timing Report</TITLE>
+<STYLE TYPE="text/css">
+<!--
+ body,pre{    font-family:'Courier New', monospace;    color: #000000;    font-size:88%;    background-color: #ffffff;}h1 {    font-weight: bold;    margin-top: 24px;    margin-bottom: 10px;    border-bottom: 3px solid #000;    font-size: 1em;}h2 {    font-weight: bold;    margin-top: 18px;    margin-bottom: 5px;    font-size: 0.90em;}h3 {    font-weight: bold;    margin-top: 12px;    margin-bottom: 5px;    font-size: 0.80em;}p {    font-size:78%;}P.Table {    margin-top: 4px;    margin-bottom: 4px;    margin-right: 4px;    margin-left: 4px;}table{    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    border-collapse: collapse;}th {    font-weight:bold;    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    text-align:left;    font-size:78%;}td {    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    font-size:78%;}a {    color:#013C9A;    text-decoration:none;}a:visited {    color:#013C9A;}a:hover, a:active {    text-decoration:underline;    color:#5BAFD4;}.pass{background-color: #00ff00;}.fail{background-color: #ff0000;}.comment{    font-size: 90%;    font-style: italic;}
+-->
+</STYLE>
+</HEAD>
+<PRE><A name="Map_Twr"></A><B><U><big>Lattice Synthesis Timing Report</big></U></B>
 --------------------------------------------------------------------------------
 Lattice Synthesis Timing Report, Version  
 Fri Mar 10 23:28:37 2017
@@ -8,7 +17,7 @@ Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2017 Lattice Semiconductor Corporation,  All rights reserved.
 
-Report Information
+<A name="mtw1_ri"></A><B><U><big>Report Information</big></U></B>
 ------------------
 Design:     AutoShift
 Constraint file:  
@@ -208,7 +217,7 @@ Route         6   e 1.218                                  n950
 Warning: 6.678 ns is the maximum delay for this constraint.
 
 
-Timing Report Summary
+<A name="mtw1_rs"></A><B><U><big>Timing Report Summary</big></U></B>
 --------------
 --------------------------------------------------------------------------------
 Constraint                              |   Constraint|       Actual|Levels
@@ -253,7 +262,7 @@ Led[5]                                  |       6|      20|     17.24%
 --------------------------------------------------------------------------------
 
 
-Timing summary:
+<A name="mtw1_ts"></A><B><U><big>Timing summary:</big></U></B>
 ---------------
 
 Timing errors: 116  Score: 49532
@@ -263,3 +272,59 @@ Constraints cover  531 paths, 238 nets, and 749 connections (72.9% coverage)
 
 Peak memory: 54566912 bytes, TRCE: 2715648 bytes, DLYMAN: 0 bytes
 CPU_TIME_REPORT: 0 secs 
+
+
+
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+<BR>
+</PRE></FONT>
+</BODY>
+</HTML>
