--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
@@ -2,18 +2,18 @@
 <HEAD><TITLE>Bitgen Report</TITLE>
 <STYLE TYPE="text/css">
 <!--
- body,pre{    font-family:'Courier New', monospace;    color: #000000;    font-size:88%;    background-color: #ffffff;}h1 {    font-weight: bold;    margin-top: 24px;    margin-bottom: 10px;    border-bottom: 3px solid #000;    font-size: 1em;}h2 {    font-weight: bold;    margin-top: 18px;    margin-bottom: 5px;    font-size: 0.90em;}h3 {    font-weight: bold;    margin-top: 12px;    margin-bottom: 5px;    font-size: 0.80em;}p {    font-size:78%;}P.Table {    margin-top: 4px;    margin-bottom: 4px;    margin-right: 4px;    margin-left: 4px;}table{    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    border-collapse: collapse;}th {    font-weight:bold;    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    text-align:left;    font-size:78%;}td {    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    font-size:78%;}a {    color:#013C9A;    text-decoration:none;}a:visited {    color:#013C9A;}a:hover, a:active {    text-decoration:underline;    color:#5BAFD4;}.pass{background-color: #00ff00;}.fail{background-color: #ff0000;}.comment{    font-size: 90%;    font-style: italic;}
+ body,pre{    font-family:'Courier New', monospace;    color: #000000;    font-size:88%;    background-color: #ffffff;}h1 {    font-weight: bold;    margin-top: 24px;    margin-bottom: 10px;    border-bottom: 3px solid #000;    font-size: 1em;}h2 {    font-weight: bold;    margin-top: 18px;    margin-bottom: 5px;    font-size: 0.90em;}h3 {    font-weight: bold;    margin-top: 12px;    margin-bottom: 5px;    font-size: 0.80em;}p {    font-size:78%;}P.Table {    margin-top: 4px;    margin-bottom: 4px;    margin-right: 4px;    margin-left: 4px;}table{    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    border-collapse: collapse;}th {    font-weight:bold;    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    text-align:left;    font-size:78%;}td {    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    font-size:78%;}a {    color:#013C9A;    text-decoration:none;}a:visited {    color:#013C9A;}a:hover, a:active {    text-decoration:underline;    color:#5BAFD4;}.pass{background-color: #00ff00;}.fail{background-color: #ff0000;}.comment{    font-size: 90%;    font-style: italic;}
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="Bgn"></A>BITGEN: Bitstream Generator Diamond (64-bit) 3.3.0.109
+<PRE><A name="Bgn"></A>BITGEN: Bitstream Generator Diamond (64-bit) 3.9.0.99.2
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
-Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
+Copyright (c) 2002-2017 Lattice Semiconductor Corporation,  All rights reserved.
 
-Command: bitgen -g RamCfg:Reset -path /home/justin/7SegClock/7SegClock/Lattice_FPGA -w -jedec -gui SevenSegClock_SevenSegClock.ncd SevenSegClock_SevenSegClock.prf 
+Command: bitgen -g RamCfg:Reset -path C:/Users/Justin/Dropbox/Projects/7SegClock/Lattice_FPGA -w -jedec -gui SevenSegClock_SevenSegClock.ncd SevenSegClock_SevenSegClock.prf 
 
 Loading design for application Bitgen from file SevenSegClock_SevenSegClock.ncd.
 Design name: AutoShift
@@ -22,9 +22,9 @@ Vendor:      LATTICE
 Device:      LCMXO2-640UHC
 Package:     TQFP144
 Performance: 5
-Loading device for application Bitgen from file 'xo2c1200.nph' in environment: /usr/local/diamond/3.3_x64/ispfpga.
-Package Status:                     Final          Version 1.39.
-Performance Hardware Data Status:   Final          Version 26.4.
+Loading device for application Bitgen from file 'xo2c1200.nph' in environment: C:/lscc/diamond/3.9_x64/ispfpga.
+Package Status:                     Final          Version 1.42.
+Performance Hardware Data Status:   Final          Version 34.4.
 
 Running DRC.
 DRC detected 0 errors and 0 warnings.
@@ -41,6 +41,8 @@ Reading Preference File from SevenSegClock_SevenSegClock.prf.
 |                     MCCLK_FREQ  |                         2.08**  |
 +---------------------------------+---------------------------------+
 |                  CONFIG_SECURE  |                          OFF**  |
++---------------------------------+---------------------------------+
+|                          INBUF  |                           ON**  |
 +---------------------------------+---------------------------------+
 |                      JTAG_PORT  |                       ENABLE**  |
 +---------------------------------+---------------------------------+
@@ -66,13 +68,15 @@ Reading Preference File from SevenSegClock_SevenSegClock.prf.
 +---------------------------------+---------------------------------+
 |                  SHAREDEBRINIT  |                      DISABLE**  |
 +---------------------------------+---------------------------------+
+|            BACKGROUND_RECONFIG  |                          OFF**  |
++---------------------------------+---------------------------------+
  *  Default setting.
  ** The specified setting matches the default setting.
 
 
 Creating bit map...
  
-Bitstream Status: Final           Version 1.84.
+Bitstream Status: Final           Version 1.94.
  
 Saving bit stream in "SevenSegClock_SevenSegClock.jed".
  
