--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
@@ -2,44 +2,44 @@
 <HEAD><TITLE>Place & Route Report</TITLE>
 <STYLE TYPE="text/css">
 <!--
- body,pre{    font-family:'Courier New', monospace;    color: #000000;    font-size:88%;    background-color: #ffffff;}h1 {    font-weight: bold;    margin-top: 24px;    margin-bottom: 10px;    border-bottom: 3px solid #000;    font-size: 1em;}h2 {    font-weight: bold;    margin-top: 18px;    margin-bottom: 5px;    font-size: 0.90em;}h3 {    font-weight: bold;    margin-top: 12px;    margin-bottom: 5px;    font-size: 0.80em;}p {    font-size:78%;}P.Table {    margin-top: 4px;    margin-bottom: 4px;    margin-right: 4px;    margin-left: 4px;}table{    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    border-collapse: collapse;}th {    font-weight:bold;    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    text-align:left;    font-size:78%;}td {    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    font-size:78%;}a {    color:#013C9A;    text-decoration:none;}a:visited {    color:#013C9A;}a:hover, a:active {    text-decoration:underline;    color:#5BAFD4;}.pass{background-color: #00ff00;}.fail{background-color: #ff0000;}.comment{    font-size: 90%;    font-style: italic;}
+ body,pre{    font-family:'Courier New', monospace;    color: #000000;    font-size:88%;    background-color: #ffffff;}h1 {    font-weight: bold;    margin-top: 24px;    margin-bottom: 10px;    border-bottom: 3px solid #000;    font-size: 1em;}h2 {    font-weight: bold;    margin-top: 18px;    margin-bottom: 5px;    font-size: 0.90em;}h3 {    font-weight: bold;    margin-top: 12px;    margin-bottom: 5px;    font-size: 0.80em;}p {    font-size:78%;}P.Table {    margin-top: 4px;    margin-bottom: 4px;    margin-right: 4px;    margin-left: 4px;}table{    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    border-collapse: collapse;}th {    font-weight:bold;    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    text-align:left;    font-size:78%;}td {    padding: 4px;    border-width: 1px 1px 1px 1px;    border-style: solid solid solid solid;    border-color: black black black black;    vertical-align:top;    font-size:78%;}a {    color:#013C9A;    text-decoration:none;}a:visited {    color:#013C9A;}a:hover, a:active {    text-decoration:underline;    color:#5BAFD4;}.pass{background-color: #00ff00;}.fail{background-color: #ff0000;}.comment{    font-size: 90%;    font-style: italic;}
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="Par"></A>PAR: Place And Route Diamond (64-bit) 3.3.0.109.
+<PRE><A name="Par"></A>PAR: Place And Route Diamond (64-bit) 3.9.0.99.2.
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
-Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Thu Apr  2 04:22:58 2015
+Copyright (c) 2002-2017 Lattice Semiconductor Corporation,  All rights reserved.
+Fri Mar 10 23:28:41 2017
 
-/usr/local/diamond/3.3_x64/ispfpga/bin/lin64/par -f
-SevenSegClock_SevenSegClock.p2t SevenSegClock_SevenSegClock_map.ncd
-SevenSegClock_SevenSegClock.dir SevenSegClock_SevenSegClock.prf -gui
+C:/lscc/diamond/3.9_x64/ispfpga\bin\nt64\par -f SevenSegClock_SevenSegClock.p2t
+SevenSegClock_SevenSegClock_map.ncd SevenSegClock_SevenSegClock.dir
+SevenSegClock_SevenSegClock.prf -gui
 
 
 Preference file: SevenSegClock_SevenSegClock.prf.
 
 <A name="par_cts"></A><B><U><big>Cost Table Summary</big></U></B>
-Level/      Number      Worst       Timing      Worst       Timing      Run         NCD
-Cost [ncd]  Unrouted    Slack       Score       Slack(hold) Score(hold) Time        Status
-----------  --------    -----       ------      ----------- ----------- -----       ------
-5_1   *     0           278.551     0           0.322       0           08          Complete        
+Level/       Number       Worst        Timing       Worst        Timing       Run          NCD
+Cost [ncd]   Unrouted     Slack        Score        Slack(hold)  Score(hold)  Time         Status
+----------   --------     -----        ------       -----------  -----------  ----         ------
+5_1   *      0            277.633      0            0.322        0            21           Complete
 
 
 * : Design saved.
 
-Total (real) run time for 1-seed: 8 secs 
+Total (real) run time for 1-seed: 21 secs 
 
 par done!
 
 Lattice Place and Route Report for Design &quot;SevenSegClock_SevenSegClock_map.ncd&quot;
-Thu Apr  2 04:22:58 2015
+Fri Mar 10 23:28:41 2017
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
-PAR: Place And Route Diamond (64-bit) 3.3.0.109.
+PAR: Place And Route Diamond (64-bit) 3.9.0.99.2.
 Command Line: par -w -l 5 -i 6 -t 1 -c 0 -e 0 -gui -exp parUseNBR=1:parCDP=0:parCDR=0:parPathBased=OFF SevenSegClock_SevenSegClock_map.ncd SevenSegClock_SevenSegClock.dir/5_1.ncd SevenSegClock_SevenSegClock.prf
 Preference file: SevenSegClock_SevenSegClock.prf.
 Placement level-cost: 5-1.
@@ -52,9 +52,9 @@ Vendor:      LATTICE
 Device:      LCMXO2-640UHC
 Package:     TQFP144
 Performance: 5
-Loading device for application par from file &apos;xo2c1200.nph&apos; in environment: /usr/local/diamond/3.3_x64/ispfpga.
-Package Status:                     Final          Version 1.39.
-Performance Hardware Data Status:   Final          Version 26.4.
+Loading device for application par from file &apos;xo2c1200.nph&apos; in environment: C:/lscc/diamond/3.9_x64/ispfpga.
+Package Status:                     Final          Version 1.42.
+Performance Hardware Data Status:   Final          Version 34.4.
 License checked out.
 
 
@@ -64,20 +64,21 @@ Ignore Preference Error(s):  True
 
    PIO (prelim)   89+4(JTAG)/108     86% used
                   89+4(JTAG)/108     86% bonded
+   IOLOGIC           85/108          78% used
 
-   SLICE            157/320          49% used
+   SLICE            111/320          34% used
 
    OSC                1/1           100% used
 
 
-Number of Signals: 439
-Number of Connections: 876
+Number of Signals: 421
+Number of Connections: 911
 
 Pin Constraint Summary:
-   25 out of 25 pins locked (100% locked).
+   25 out of 89 pins locked (28% locked).
 
 The following 3 signals are selected to use the primary clock routing resources:
-    osc_clk_c_c (driver: OSCH_inst, clk load #: 60)
+    osc_clk_c_c (driver: OSCH_inst, clk load #: 100)
     clk_c (driver: clk, clk load #: 48)
     latch_c (driver: latch, clk load #: 42)
 
@@ -85,25 +86,25 @@ WARNING - par: Signal &quot;clk_c&quot; is selected to use Primary clock resourc
 WARNING - par: Signal &quot;latch_c&quot; is selected to use Primary clock resources. However, its driver comp &quot;latch&quot; is located at &quot;65&quot;, which is not a dedicated pin for connecting to Primary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
 
 The following 2 signals are selected to use the secondary clock routing resources:
-    heartbeat_c (driver: SLICE_57, clk load #: 0, sr load #: 44, ce load #: 0)
+    heartbeat_c (driver: SLICE_0, clk load #: 0, sr load #: 84, ce load #: 0)
     pwm_c (driver: pwm, clk load #: 6, sr load #: 0, ce load #: 0)
 
 WARNING - par: Signal &quot;pwm_c&quot; is selected to use Secondary clock resources. However, its driver comp &quot;pwm&quot; is located at &quot;50&quot;, which is not a dedicated pin for connecting to Secondary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
 No signal is selected as Global Set/Reset.
 .
 Starting Placer Phase 0.
-............
-Finished Placer Phase 0.  REAL time: 0 secs 
+...........
+Finished Placer Phase 0.  REAL time: 6 secs 
 
 Starting Placer Phase 1.
-.....................
-Placer score = 48714.
-Finished Placer Phase 1.  REAL time: 7 secs 
+....................
+Placer score = 61769.
+Finished Placer Phase 1.  REAL time: 18 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  48622
-Finished Placer Phase 2.  REAL time: 7 secs 
+Placer score =  61565
+Finished Placer Phase 2.  REAL time: 18 secs 
 
 
 
@@ -117,10 +118,10 @@ Global Clock Resources:
   DCC        : 0 out of 8 (0%)
 
 Quadrants All (TL, TR, BL, BR) - Global Clocks:
-  PRIMARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 60
+  PRIMARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 100
   PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;67 (PB18D)&quot;, clk load = 48
   PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;65 (PB18C)&quot;, clk load = 42
-  SECONDARY &quot;heartbeat_c&quot; from Q1 on comp &quot;SLICE_57&quot; on site &quot;R7C12A&quot;, clk load = 0, ce load = 0, sr load = 44
+  SECONDARY &quot;heartbeat_c&quot; from Q1 on comp &quot;SLICE_0&quot; on site &quot;R7C12C&quot;, clk load = 0, ce load = 0, sr load = 84
   SECONDARY &quot;pwm_c&quot; from comp &quot;pwm&quot; on PIO site &quot;50 (PB9B)&quot;, clk load = 6, ce load = 0, sr load = 0
 
   PRIMARY  : 3 out of 8 (37%)
@@ -143,23 +144,23 @@ I/O Bank Usage Summary:
 | I/O Bank | Usage          | Bank Vccio | Bank Vref |
 +----------+----------------+------------+-----------+
 | 0        | 24 / 28 ( 85%) | 3.3V       | -         |
-| 1        | 20 / 26 ( 76%) | 3.3V       | -         |
-| 2        | 26 / 28 ( 92%) | 3.3V       | -         |
-| 3        | 19 / 26 ( 73%) | 3.3V       | -         |
+| 1        | 26 / 26 (100%) | 3.3V       | -         |
+| 2        | 24 / 28 ( 85%) | 3.3V       | -         |
+| 3        | 15 / 26 ( 57%) | 3.3V       | -         |
 +----------+----------------+------------+-----------+
 
-Total placer CPU time: 7 secs 
+Total placer CPU time: 12 secs 
 
 Dumping design to file SevenSegClock_SevenSegClock.dir/5_1.ncd.
 
-0 connections routed; 876 unrouted.
+0 connections routed; 911 unrouted.
 Starting router resource preassignment
 WARNING - par: The driver of primary clock net clk_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 WARNING - par: The driver of primary clock net latch_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 
-Completed router resource preassignment. Real time: 7 secs 
+Completed router resource preassignment. Real time: 19 secs 
 
-Start NBR router at Thu Apr 02 04:23:06 UTC 2015
+Start NBR router at 23:29:01 03/10/17
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -171,38 +172,38 @@ Info: NBR allows conflicts(one node used by more than one signal)
 Note: NBR uses a different method to calculate timing slacks. The
       worst slack and total negative slack may not be the same as
       that in TRCE report. You should always run TRCE to verify  
-      your design. Thanks.                                       
+      your design.                                               
 *****************************************************************
 
-Start NBR special constraint process at Thu Apr 02 04:23:06 UTC 2015
+Start NBR special constraint process at 23:29:01 03/10/17
 
-Start NBR section for initial routing at Thu Apr 02 04:23:06 UTC 2015
+Start NBR section for initial routing at 23:29:01 03/10/17
 Level 4, iteration 1
-21(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 279.173ns/0.000ns; real time: 8 secs 
+20(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 278.832ns/0.000ns; real time: 20 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Thu Apr 02 04:23:06 UTC 2015
+Start NBR section for normal routing at 23:29:01 03/10/17
 Level 4, iteration 1
-12(0.01%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 278.551ns/0.000ns; real time: 8 secs 
+17(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 278.832ns/0.000ns; real time: 20 secs 
 Level 4, iteration 2
-1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 278.551ns/0.000ns; real time: 8 secs 
+4(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 277.633ns/0.000ns; real time: 20 secs 
 Level 4, iteration 3
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 278.551ns/0.000ns; real time: 8 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 277.633ns/0.000ns; real time: 20 secs 
 
-Start NBR section for setup/hold timing optimization with effort level 3 at Thu Apr 02 04:23:06 UTC 2015
+Start NBR section for setup/hold timing optimization with effort level 3 at 23:29:01 03/10/17
 
-Start NBR section for re-routing at Thu Apr 02 04:23:06 UTC 2015
+Start NBR section for re-routing at 23:29:02 03/10/17
 Level 4, iteration 1
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 278.551ns/0.000ns; real time: 8 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 277.633ns/0.000ns; real time: 21 secs 
 
-Start NBR section for post-routing at Thu Apr 02 04:23:06 UTC 2015
+Start NBR section for post-routing at 23:29:02 03/10/17
 
 End NBR router with 0 unrouted connection
 
@@ -210,19 +211,17 @@ NBR Summary
 -----------
   Number of unrouted connections : 0 (0.00%)
   Number of connections with timing violations : 0 (0.00%)
-  Estimated worst slack&lt;setup&gt; : 278.551ns
+  Estimated worst slack&lt;setup&gt; : 277.633ns
   Timing score&lt;setup&gt; : 0
 -----------
 Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored.
 
 
 
-Total CPU time 8 secs 
-Total REAL time: 8 secs 
+Total CPU time 14 secs 
+Total REAL time: 21 secs 
 Completely routed.
-End of route.  876 routed (100.00%); 0 unrouted.
-Checking DRC ... 
-No errors found.
+End of route.  911 routed (100.00%); 0 unrouted.
 
 Hold time timing score: 0, hold timing errors: 0
 
@@ -236,14 +235,14 @@ All signals are completely routed.
 
 PAR_SUMMARY::Run status = completed
 PAR_SUMMARY::Number of unrouted conns = 0
-PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 278.551
+PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 277.633
 PAR_SUMMARY::Timing score&lt;setup/&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 0.322
 PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Number of errors = 0
 
-Total CPU  time to completion: 8 secs 
-Total REAL time to completion: 8 secs 
+Total CPU  time to completion: 14 secs 
+Total REAL time to completion: 21 secs 
 
 par done!
 
@@ -251,7 +250,7 @@ Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
-Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
+Copyright (c) 2002-2017 Lattice Semiconductor Corporation,  All rights reserved.
 
 
 
